# iota-names

./: .dockerignore  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc.json  .lycheeignore  .prettierignore  .typos.toml  NOTICE  README.md  dprint.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  renameFiles.js  turbo.json
.changeset/: chatty-bats-fly.md  config.json  fifty-candies-refuse.md  gold-knives-warn.md  hip-keys-share.md  in-rust-we-trust.md  khaki-parrots-raise.md  late-windows-act.md  mean-feet-love.md  petite-bottles-shout.md  seven-hounds-search.md  soft-carpets-watch.md  strong-fans-hang.md  thirty-ads-cough.md
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  discussion.md  doc-bug.md  feature_request.md
.github/scripts/: download-iota-binary.sh  setup-e2e-network.sh
.github/workflows/: changesets-snapshot-release.yml  changesets.yml  changesets_ci.yml  changesets_ci_comment.yml  changesets_publish.yml  deploy-docs-vercel.yml  deploy_docs_vercel.yml  develop_ci_slack_report.yml  docker-deployment.yaml  dprint.yaml  dprint.yml  indexer-docker-build.yaml  indexer.yaml  indexer.yml  iota-names-build-tx.yaml  iota-names-combine-execute.yaml  iota-names-indexer-docker-build.yml  iota-names.preview-deploy.yml  iota-names.production-deploy.yml  iota-names.production-mainnet-deploy.yml  iota-names.production-testnet-deploy.yml  iota-names.staging-deploy.yml  iota_names.preview_deploy.yml  iota_names.production_mainnet_deploy.yml  iota_names.production_testnet_deploy.yml  iota_names.staging_deploy.yml  iota_names_build_tx.yml  iota_names_combine_execute.yml  iota_names_deploy.yml  iota_names_indexer_docker_build.yml  iotans-build-tx.yaml  iotans-combine-execute.yaml  labeler.yml  links_checker.yml  move_lint.yaml  move_packages.yml  move_test.yaml  move_test.yml  names-display-ci.yml  names-display.production-deploy.yaml  (+12 more)
.husky/: pre-commit
build-scripts/: package.json
build-scripts/src/: build-package.ts
crates/iota-names-indexer/: .gitignore  Cargo.toml
crates/iota-names-indexer/src/: main.rs  metrics.rs  worker.rs
dapp/: .env.development  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  README.md  ampli.json  mdx-components.tsx  next.config.mjs  package.json  playwright.config.ts  postcss.config.mjs  prependLicense.mjs  sentry.common.config.mjs  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
dapp/scripts/: downloadWallet.mjs  download_wallet_artifact.sh  injectLocalnetConfig.mjs  update_auctions_constants.sh  update_auctions_duration.sh
dapp/src/: instrumentation-client.ts  instrumentation.ts
dapp/tests/: auction-mode.spec.ts  example.spec.ts  utils.ts
dev-tools/iota-names-indexer/: docker-compose.yml
docker/iota-names-indexer/: Dockerfile
documentation/: .gitignore  README.md  next.config.js  next.config.mjs  package.json  postcss.config.js  tailwind.config.js  theme.config.jsx  vercel.json
documentation/components/: beta.js  footer.js  nav.js
documentation/pages/: _app.js  _document.js  _meta.js  _meta.json  dao.mdx  developer.mdx  index.mdx  move-registry.mdx  node-operator.mdx  user.mdx
documentation/public/: iota-names.css  iotans.css
indexer/: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml  diesel.toml  prometheus.yml  test_api.sh
indexer/docker/: Dockerfile  build.sh  docker-compose.yml  update_progress.sh
indexer/docker/assets/grafana/: datasources.yaml
indexer/docker/assets/grafana/dashboards/: dashboards.yml  iota_names_dashboard.json  iota_names_influxdb_dashboard.json
indexer/docker/assets/prometheus/: prometheus.yml
indexer/migrations/2025-06-13-095251_create_auctions/: down.sql  up.sql
indexer/migrations/2025-06-13-134255_create_auctions/: down.sql  up.sql
indexer/migrations/2025-06-18-131642_create_domain_bids/: down.sql  up.sql
indexer/migrations/2025-06-18-131642_create_name_bids/: down.sql  up.sql
indexer/migrations/2025-07-24-070727_add_bid_value/: down.sql  up.sql
indexer/migrations/2025-08-08-084513_add_claimed_names/: down.sql  up.sql
indexer/migrations/2025-09-11-063535_add_blocked_strings/: down.sql  up.sql
indexer/src/: api.rs  config.rs  db.rs  events.rs  influxdb.rs  main.rs  metrics.rs  models.rs  worker.rs
indexer/src/api/: auth.rs  error.rs  extractors.rs  mod.rs  requests.rs  responses.rs  routes.rs
indexer/src/db/: helpers.rs  mod.rs  models.rs  pool.rs  queries.rs
linting/: .eslintrc.precommit.js
linting/license-check/: package.json  plugin.js
names-display/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json  vitest.config.ts
names-display/src/: env.ts  index.test.ts  index.ts  test-utils.ts
scripts/: README.md  docgen.sh  owned-objects.json  package-lock.json  package.json  postcss.config.cjs  remove-move-envs.ts  tsconfig.json
scripts/build-tools/: build.ts
scripts/config/: constants.ts  day_one.ts  devnet-package-info.json  devnet_package_info.json  discounts.ts
scripts/coupons/: coupon.ts  couponTransactions.ts
scripts/day_one/: setup.ts
scripts/discounts/: discounts.ts
scripts/init/: authorization.ts  display-tp.ts  display_tp.ts  init.ts  labels-to-block.txt  labels-to-reserve.txt  manifests.ts  names-to-block.txt  names-to-register.csv  namesToRegister.csv  packages.ts  publish.ts  queries.ts  setup.ts  types.ts
scripts/package-info/: constants.ts  devnet.json  localnet.json  mainnet.json  testnet.json
scripts/reserved-names/: block-names.ts  deny-labels.ts  fetch-owned-names.ts  objects.ts  owned-objects.json  register-names.ts  reserve-names.ts  transfer-names.ts
scripts/tests/: register-name.ts
scripts/transactions/: addresses.json  authorize-iotalink-discount.ts  caps-to-foundation.ts  coupons_upgrade.ts  create-bulk-coupons.ts  mass-ops.ts  (+11 more)
sdk/: CHANGELOG.md  README.md  information.md  package.json  tsconfig.json  tsconfig.lint.json  vitest.config.ts
toolkit/: README.md  package.json  vitest.config.mts
(+472 files in other folders)
