[package]
name = "iota-names-indexer"
version = "0.0.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "IOTA-Names Indexer"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2", "json", "matched-path", "original-uri", "form", "query", "ws", "macros"] }
bcs = "0.1"
chrono = "0.4.41"
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15"
futures = "0.3"
prometheus = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = "1.47"
tokio-util = "0.7"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter"] }

bin-version = { git = "https://github.com/iotaledger/iota", package = "bin-version" }
iota-data-ingestion-core = { git = "https://github.com/iotaledger/iota", package = "iota-data-ingestion-core" }
iota-json = { git = "https://github.com/iotaledger/iota", package = "iota-json" }
iota-json-rpc-types = { git = "https://github.com/iotaledger/iota", package = "iota-json-rpc-types" }
iota-metrics = { git = "https://github.com/iotaledger/iota", package = "iota-metrics" }
iota-names = { git = "https://github.com/iotaledger/iota", package = "iota-names" }
iota-protocol-config = { git = "https://github.com/iotaledger/iota", package = "iota-protocol-config" }
iota-sdk = { git = "https://github.com/iotaledger/iota", package = "iota-sdk" }
iota-types = { git = "https://github.com/iotaledger/iota", package = "iota-types" }
move-core-types = { git = "https://github.com/iotaledger/iota", package = "move-core-types" }

[features]
default = []
