[package]
name = "iota-names-indexer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
prometheus.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

# internal dependencies
iota-data-ingestion-core.workspace = true
iota-metrics.workspace = true
iota-names.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true
