[package]
name = "iota-names-indexer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "IOTA-Names Indexer"

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
clap.workspace = true
dotenvy = "0.15"
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter"] }

# internal dependencies
bin-version.workspace = true
iota-data-ingestion-core.workspace = true
iota-json.workspace = true
iota-metrics.workspace = true
iota-names.workspace = true
iota-types.workspace = true
move-core-types.workspace = true
